<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CommenceICAnalysisActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:text="@string/choose_calibration_parameter"
        android:id="@+id/btnChooseParam" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:enabled="false"
        android:text="@string/add_images_of_known_sample_concentration"
        android:id="@+id/btnAddImage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:enabled="false"
        android:text="@string/add_image_of_unknown_sample_concentration"
        android:id="@+id/btnAddUnknownSampleImage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:enabled="false"
        android:text="@string/get_unknown_concentration"
        android:id="@+id/btnGetConc" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableScrollView"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/intensity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/concentration" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>