<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CommenceIWAnalysisActivity">

    <ProgressBar
        android:id="@+id/analysingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminate="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/analysisImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGetImgFromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/txtGetImgFromGallery" />

    </LinearLayout>

    <Button
        android:id="@+id/chooseCalibParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:enabled="false"
        android:padding="3dp"
        android:text="@string/btnTextChooseParam" />

    <Button
        android:id="@+id/showResultsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:enabled="false"
        android:padding="3dp"
        android:text="@string/btnTextShowResults" />

</LinearLayout>